ros2_ws/log/build_2024-10-07_23-31-47/lidar_seg/stderr.log
  File "/home/ubuntu/Internship/ros2_ws/install/lidar_seg/lib/python3.10/site-packages/lidar_seg/listener_test.py", line 81
    Without colors
            ^^^^^^
SyntaxError: invalid syntax

